Changelog
=========

1.0 (unreleased)
------------------

- Ensure separated items in edit bar menus are included in Bootstrap
  themes.
  [davidjb]
- Update Bootstrap to 2.3.2 (and add upgrade instructions).
  [davidjb]
- Ensure Bootstrap and Foundation buttons have value, name, 
  and other attributes copied to ensure form actions can take place.
  [davidjb]
   

1.0dev (unreleased)
------------------

- Initial release
