@@ -6,7 +6,7 @@
 
   <replace css:content="#portal-logo > img">
     <img>
-      <xsl:attribute name="src">/++theme++plone/img/black/logo-64.png</xsl:attribute>
+      <xsl:attribute name="src">++theme++plone/img/black/logo-64.png</xsl:attribute>
       <xsl:attribute name="width">245</xsl:attribute>
       <xsl:attribute name="height">64</xsl:attribute>
       <xsl:attribute name="title">
