@@ -6,8 +6,8 @@
 
   <replace css:content="#portal-logo > img">
     <img>
-      <xsl:attribute name="src">/++theme++plone/img/blue/logo-64.png</xsl:attribute>
-      <xsl:attribute name="width">245</xsl:attribute>
+      <xsl:attribute name="src">++theme++plone/img/default/logo-64.png</xsl:attribute>
+      <xsl:attribute name="width">247</xsl:attribute>
       <xsl:attribute name="height">64</xsl:attribute>
       <xsl:attribute name="title">
         <xsl:value-of select="./@title"/>
